--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-adonis": "^2.1.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "openapi-types": "^11.0.1",
     "pino-pretty": "^7.6.1",
     "prettier": "^2.6.2",
     "typescript": "~4.6",
@@ -53,6 +54,7 @@
   },
   "dependencies": {
     "@adonisjs/core": "^5.8.0",
+    "@adonisjs/lucid": "^18.0.0",
     "@adonisjs/repl": "^3.1.0",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
