--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,11 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=nNXnQq0_HbeqMI3V2iibFcpfb_Ci2fJN
 DRIVE_DISK=local
+DB_CONNECTION=pg
+
+# Database
+PG_HOST=localhost
+PG_PORT=5432
+PG_USER=postgres
+PG_PASSWORD=postgres
+PG_DB_NAME=postgres
