--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "@adonisjs/core": "^5.8.0",
     "@adonisjs/lucid": "^18.0.0",
+    "@adonisjs/redis": "^7.3.0",
     "@adonisjs/repl": "^3.1.0",
     "luxon": "^2.4.0",
     "pg": "^8.7.3",
