chore: configure adonis redis

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,9 @@ PG_PORT=5432
 PG_USER=postgres
 PG_PASSWORD=postgres
 PG_DB_NAME=postgres
+
+# Redis
+REDIS_CONNECTION=local
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=redis
