--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
       "@adonisjs/repl",
       "@japa/preset-adonis/build/adonis-typings",
       "@adonisjs/lucid",
-      "@adonisjs/redis"
+      "@adonisjs/redis",
+      "@adonisjs/auth"
     ]
   }
 }
