feat: add sql init file

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ PG_HOST=localhost
 PG_PORT=5432
 PG_USER=postgres
 PG_PASSWORD=postgres
-PG_DB_NAME=postgres
+PG_DB_NAME=base_acl_db_development
 
 # Redis
 REDIS_CONNECTION=local
