--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "pino-pretty": "^7.6.1",
     "prettier": "^2.6.2",
     "typescript": "~4.6",
+    "yarn-upgrade-all": "^0.7.1",
     "youch": "^3.2.0",
     "youch-terminal": "^2.1.4"
   },
