--- a/package.json
+++ b/package.json
@@ -41,24 +41,24 @@
     "@japa/preset-adonis": "^1.0.16",
     "@japa/runner": "^2.0.8",
     "adonis-preset-ts": "^2.1.0",
-    "eslint": "^8.16.0",
+    "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-adonis": "^2.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "openapi-types": "^11.0.1",
-    "pino-pretty": "^7.6.1",
+    "openapi-types": "^12.0.0",
+    "pino-pretty": "^8.0.0",
     "prettier": "^2.6.2",
-    "typescript": "~4.6",
+    "typescript": "^4.7.3",
     "yarn-upgrade-all": "^0.7.1",
     "youch": "^3.2.0",
     "youch-terminal": "^2.1.4"
   },
   "dependencies": {
     "@adonisjs/auth": "^8.2.1",
-    "@adonisjs/core": "^5.8.0",
-    "@adonisjs/lucid": "^18.0.0",
+    "@adonisjs/core": "^5.8.3",
+    "@adonisjs/lucid": "^18.0.1",
     "@adonisjs/redis": "^7.3.0",
-    "@adonisjs/repl": "^3.1.0",
+    "@adonisjs/repl": "^3.1.11",
     "luxon": "^2.4.0",
     "pg": "^8.7.3",
     "proxy-addr": "^2.0.7",
