--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@japa/preset-adonis": "^1.1.0",
     "@japa/runner": "^2.0.9",
     "adonis-preset-ts": "^2.1.0",
-    "eslint": "^8.18.0",
+    "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-adonis": "^2.1.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -60,11 +60,12 @@
     "@adonisjs/lucid": "^18.1.0",
     "@adonisjs/redis": "^7.3.0",
     "@adonisjs/repl": "^3.1.11",
-    "luxon": "^2.4.0",
+    "luxon": "^3.0.1",
     "pg": "^8.7.3",
     "phc-argon2": "^1.1.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "tsyringe": "^4.7.0"
   }
 }
