--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "phc-argon2": "^1.1.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.5.1",
     "source-map-support": "^0.5.21",
     "tsyringe": "^4.7.0"
   }
