--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "typescript": "~5.7.2"
   },
   "dependencies": {
+    "@adonisjs/ally": "^5.0.2",
     "@adonisjs/auth": "^9.2.4",
     "@adonisjs/core": "^6.15.1",
     "@adonisjs/cors": "^2.2.1",
