chore: add author metadata and Node.js engine requirement
Included author details such as name, email, and GitHub URL in `package.json`. Added a minimum Node.js version requirement (>=23.13.1) under the `engines` field to ensure compatibility.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "name": "base-acl-api",
   "version": "0.0.1",
+  "author": {
+    "name": "Gabriel M.",
+    "email": "gabrielmaialva33@gmail.com",
+    "url": "https://github.com/gabrielmaialva33"
+  },
   "private": true,
   "type": "module",
   "license": "MIT",
+  "engines": {
+    "node": ">=23.13.1"
+  },
   "scripts": {
     "start": "node bin/server.js",
     "build": "node ace build",
