--- a/.env.example
+++ b/.env.example
@@ -17,23 +17,58 @@ DB_USER=root
 DB_PASSWORD=root
 DB_DATABASE=app
 
-DISCORD_CLIENT_ID=
-DISCORD_CLIENT_SECRET=
+# Web clients
+DISCORD_CLIENT_ID=some-id
+DISCORD_CLIENT_SECRET=some-secret
 
-FACEBOOK_CLIENT_ID=
-FACEBOOK_CLIENT_SECRET=
+FACEBOOK_CLIENT_ID=some-id
+FACEBOOK_CLIENT_SECRET=some-secret
 
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
+GITHUB_CLIENT_ID=some-id
+GITHUB_CLIENT_SECRET=some-secret
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=some-id
+GOOGLE_CLIENT_SECRET=some-secret
 
-LINKEDIN_CLIENT_ID=
-LINKEDIN_CLIENT_SECRET=
+LINKEDIN_CLIENT_ID=some-id
+LINKEDIN_CLIENT_SECRET=some-secret
 
-SPOTIFY_CLIENT_ID=
-SPOTIFY_CLIENT_SECRET=
+SPOTIFY_CLIENT_ID=some-id
+SPOTIFY_CLIENT_SECRET=some-secret
 
-TWITTER_CLIENT_ID=
-TWITTER_CLIENT_SECRET=
+TWITTER_CLIENT_ID=some-id
+TWITTER_CLIENT_SECRET=some-secret
+
+# SMTP
+SMTP_HOST=sandbox.smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_USER=
+SMTP_PASS=
+
+# Drive
+DRIVE_DISK=fs
+
+# AWS
+AWS_ACCESS_KEY_ID=some-key
+AWS_SECRET_ACCESS_KEY=some-secret
+AWS_REGION=sa-east-1
+
+# S3
+S3_BUCKET=some-bucket
+
+# Digital Ocean Spaces
+SPACES_KEY=some-key
+SPACES_SECRET=some-secret
+SPACES_REGION=sa
+SPACES_BUCKET=some-bucket
+SPACES_ENDPOINT=https://${SPACES_REGION}.digitaloceanspaces.com
+
+# R2
+R2_KEY=some-key
+R2_SECRET=some-secret
+R2_BUCKET=some-bucket
+R2_ENDPOINT=some-endpoint
+
+# GCS
+GCS_KEY=file://./gcs_key.json
+GCS_BUCKET=some-bucket
