chore: update dependencies and adjust Node.js version requirement
The Node.js engine requirement was lowered from `>=23.13.1` to `>=22.13.1` in the package.json file. Additionally, new dependencies were added, including `@adonisjs/drive`, `@aws-sdk/client-s3`, and `prettier-edgejs`. These updates extend functionality and compatibility across the project.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "type": "module",
   "license": "MIT",
   "engines": {
-    "node": ">=23.13.1"
+    "node": ">=22.13.1"
   },
   "scripts": {
     "start": "node bin/server.js",
@@ -59,6 +59,7 @@
     "hot-hook": "^0.4.0",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.4.2",
+    "prettier-edgejs": "^0.2.34",
     "ts-node-maintained": "^10.9.5",
     "typescript": "~5.7.3"
   },
@@ -67,8 +68,12 @@
     "@adonisjs/auth": "^9.3.1",
     "@adonisjs/core": "^6.17.1",
     "@adonisjs/cors": "^2.2.1",
+    "@adonisjs/drive": "^3.2.0",
     "@adonisjs/i18n": "^2.2.0",
     "@adonisjs/lucid": "^21.6.0",
+    "@aws-sdk/client-s3": "^3.738.0",
+    "@aws-sdk/s3-request-presigner": "^3.738.0",
+    "@google-cloud/storage": "^7.15.0",
     "@vinejs/vine": "^3.0.0",
     "argon2": "^0.41.1",
     "bcrypt": "^5.1.1",
