--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,9 @@ REFRESH_TOKEN_SECRET=some-secret
 # Database
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_USER=root
-DB_PASSWORD=root
-DB_DATABASE=app
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_DATABASE=postgres
 
 # Web clients
 DISCORD_CLIENT_ID=some-id
