chore: set default SMTP user and password in .env.example
Added placeholder values for SMTP_USER and SMTP_PASS in the .env.example file. This ensures better clarity for developers setting up their environment.

--- a/.env.example
+++ b/.env.example
@@ -42,8 +42,8 @@ TWITTER_CLIENT_SECRET=some-secret
 # SMTP
 SMTP_HOST=sandbox.smtp.mailtrap.io
 SMTP_PORT=2525
-SMTP_USER=
-SMTP_PASS=
+SMTP_USER=some-user
+SMTP_PASS=some-pass
 
 # Drive
 DRIVE_DISK=fs
