chore: add lint:fix script to package.json
Introduce a new npm script "lint:fix" for automatically fixing linting issues using ESLint. This enhances the developer workflow by allowing quick resolution of style inconsistencies.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "node ace test unit",
     "test:e2e": "node ace test",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit",
     "docker": "node ace migration:run && node ace db:seed && node bin/server.js"
