--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "base-acl-api",
+  "description": "This is a base API project with ACL (Access Control List) using AdonisJS.",
   "version": "0.0.1",
   "author": {
     "name": "Gabriel M.",
@@ -10,7 +11,7 @@
   "type": "module",
   "license": "MIT",
   "engines": {
-    "node": ">=22.13.1"
+    "node": ">=22.16.0"
   },
   "scripts": {
     "start": "node bin/server.js",
@@ -46,43 +47,43 @@
   },
   "devDependencies": {
     "@adonisjs/assembler": "^7.8.2",
-    "@adonisjs/eslint-config": "2.0.0-beta.7",
-    "@adonisjs/prettier-config": "^1.4.0",
-    "@adonisjs/tsconfig": "^1.4.0",
-    "@japa/api-client": "^3.0.3",
+    "@adonisjs/eslint-config": "2.1.0",
+    "@adonisjs/prettier-config": "^1.4.5",
+    "@adonisjs/tsconfig": "^1.4.1",
+    "@japa/api-client": "^3.1.0",
     "@japa/assert": "^4.0.1",
     "@japa/plugin-adonisjs": "^4.0.0",
     "@japa/runner": "^4.2.0",
-    "@swc/core": "1.10.12",
-    "@types/jsonwebtoken": "^9.0.8",
-    "@types/luxon": "^3.4.2",
-    "@types/node": "^22.12.0",
-    "eslint": "^9.19.0",
+    "@swc/core": "1.12.1",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/luxon": "^3.6.2",
+    "@types/node": "^24.0.1",
+    "eslint": "^9.29.0",
     "hot-hook": "^0.4.0",
     "pino-pretty": "^13.0.0",
-    "prettier": "^3.4.2",
-    "prettier-edgejs": "^0.2.34",
+    "prettier": "^3.5.3",
+    "prettier-edgejs": "^0.2.36",
     "ts-mockito": "^2.6.1",
     "ts-node-maintained": "^10.9.5",
-    "typescript": "~5.7.3"
+    "typescript": "~5.8.3"
   },
   "dependencies": {
-    "@adonisjs/ally": "^5.0.2",
-    "@adonisjs/auth": "^9.3.1",
-    "@adonisjs/core": "^6.17.1",
+    "@adonisjs/ally": "^5.1.0",
+    "@adonisjs/auth": "^9.4.0",
+    "@adonisjs/core": "^6.18.0",
     "@adonisjs/cors": "^2.2.1",
-    "@adonisjs/drive": "^3.2.0",
+    "@adonisjs/drive": "^3.4.1",
     "@adonisjs/i18n": "^2.2.0",
-    "@adonisjs/lucid": "^21.6.0",
-    "@aws-sdk/client-s3": "^3.738.0",
-    "@aws-sdk/s3-request-presigner": "^3.738.0",
-    "@google-cloud/storage": "^7.15.0",
-    "@vinejs/vine": "^3.0.0",
-    "argon2": "^0.41.1",
-    "bcrypt": "^5.1.1",
+    "@adonisjs/lucid": "^21.6.1",
+    "@aws-sdk/client-s3": "^3.828.0",
+    "@aws-sdk/s3-request-presigner": "^3.828.0",
+    "@google-cloud/storage": "^7.16.0",
+    "@vinejs/vine": "^3.0.1",
+    "argon2": "^0.43.0",
+    "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
-    "luxon": "^3.5.0",
-    "pg": "^8.13.1",
+    "luxon": "^3.6.1",
+    "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2"
   },
   "hotHook": {
@@ -100,7 +101,13 @@
   "pnpm": {
     "overrides": {
       "strtok3": "8.0.1"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "@swc/core",
+      "argon2",
+      "bcrypt",
+      "prettier-edgejs"
+    ]
   },
   "prettier": "@adonisjs/prettier-config"
 }
