--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,11 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 DB_DATABASE=postgres
 
+# Redis
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
 # Web clients
 DISCORD_CLIENT_ID=some-id
 DISCORD_CLIENT_SECRET=some-secret
