--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@adonisjs/drive": "^3.4.1",
     "@adonisjs/i18n": "^2.2.0",
     "@adonisjs/lucid": "^21.6.1",
+    "@adonisjs/redis": "^9.2.0",
     "@aws-sdk/client-s3": "^3.828.0",
     "@aws-sdk/s3-request-presigner": "^3.828.0",
     "@google-cloud/storage": "^7.16.0",
