feat(docker): secure Redis with password protection
Added `REDIS_PASSWORD` environment variable to Redis service in `docker-compose.yml` for enhanced security. Updated Redis command to enforce password authentication. Maintains backward compatibility with default password.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,6 +122,8 @@ services:
     restart: always
     ports:
       - '6379:6379'
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD:-redis}
     command: redis-server --requirepass ${REDIS_PASSWORD:-redis}
     volumes:
       - redis-data:/data
