--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@adonisjs/tsconfig": "^1.4.1",
     "@japa/api-client": "^3.1.0",
     "@japa/assert": "^4.0.1",
+    "@japa/openapi-assertions": "^0.1.1",
     "@japa/plugin-adonisjs": "^4.0.0",
     "@japa/runner": "^4.2.0",
     "@swc/core": "1.12.1",
