feat(env): update environment examples and testing configurations
Added `SESSION_DRIVER` to `.env.example` for improved session handling. Updated `.env.test` with clearer and consistent testing configurations, including `LOG_LEVEL=debug`, database credentials, and drive disk settings. Improved testing environment setup for better alignment with production and local development standards.

--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,7 @@
 TZ=UTC
 PORT=3334
 HOST=localhost
-LOG_LEVEL=info
+LOG_LEVEL=debug
 NODE_ENV=test
 
 ACCESS_TOKEN_SECRET=test_access_token_secret_123456789
@@ -10,9 +10,9 @@ APP_KEY=test_app_key_32_chars_minimum_12345
 
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=lucid
-DB_PASSWORD=lucid
-DB_DATABASE=lucid_test
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_DATABASE=db_testing
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
@@ -49,7 +49,7 @@ SMTP_USER=test
 SMTP_PASS=test
 
 # Test Drive
-DRIVE_DISK=local
+DRIVE_DISK=fs
 
 # Test AWS
 AWS_ACCESS_KEY_ID=test_aws_key
