chore(env): wrap `SPACES_ENDPOINT` value in quotes for consistency

--- a/.env.example
+++ b/.env.example
@@ -67,7 +67,7 @@ SPACES_KEY=some-key
 SPACES_SECRET=some-secret
 SPACES_REGION=sa
 SPACES_BUCKET=some-bucket
-SPACES_ENDPOINT=https://${SPACES_REGION}.digitaloceanspaces.com
+SPACES_ENDPOINT="https://${SPACES_REGION}.digitaloceanspaces.com"
 
 # R2
 R2_KEY=some-key
