--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/drive": "^3.4.1",
     "@adonisjs/i18n": "^2.2.0",
+    "@adonisjs/limiter": "^2.4.0",
     "@adonisjs/lucid": "^21.6.1",
     "@adonisjs/redis": "^9.2.0",
     "@adonisjs/session": "^7.5.1",
