chore(env): update `.env` files to include `LIMITER_STORE` for rate limiter configuration

--- a/.env.test
+++ b/.env.test
@@ -20,6 +20,9 @@ REDIS_PASSWORD=redis
 
 SESSION_DRIVER=memory
 
+# Rate Limiter
+LIMITER_STORE=memory
+
 # Test OAuth Clients (dummy values)
 DISCORD_CLIENT_ID=test_discord_id
 DISCORD_CLIENT_SECRET=test_discord_secret
