--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,9 @@ REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_PASSWORD=
 
+# Rate Limiter
+LIMITER_STORE=redis
+
 # Web clients
 DISCORD_CLIENT_ID=some-id
 DISCORD_CLIENT_SECRET=some-secret
