--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ LOG_LEVEL=info
 APP_KEY=
 NODE_ENV=development
 SESSION_DRIVER=cookie
+APP_URL=http://localhost:3333
 
 # Jwt
 ACCESS_TOKEN_SECRET=some-secret
@@ -49,10 +50,12 @@ TWITTER_CLIENT_ID=some-id
 TWITTER_CLIENT_SECRET=some-secret
 
 # SMTP
-SMTP_HOST=sandbox.smtp.mailtrap.io
-SMTP_PORT=2525
-SMTP_USER=some-user
-SMTP_PASS=some-pass
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+SMTP_FROM_ADDRESS=noreply@example.com
+SMTP_FROM_NAME="ACL API"
 
 # Drive
 DRIVE_DISK=fs
