--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@adonisjs/i18n": "^2.2.0",
     "@adonisjs/limiter": "^2.4.0",
     "@adonisjs/lucid": "^21.6.1",
+    "@adonisjs/mail": "^9.2.2",
     "@adonisjs/redis": "^9.2.0",
     "@adonisjs/session": "^7.5.1",
     "@adonisjs/shield": "^8.2.0",
