--- a/.env.test
+++ b/.env.test
@@ -1,8 +1,9 @@
 TZ=UTC
 PORT=3334
 HOST=localhost
-LOG_LEVEL=debug
+LOG_LEVEL=error
 NODE_ENV=test
+APP_URL=http://localhost:3334
 
 ACCESS_TOKEN_SECRET=test_access_token_secret_123456789
 REFRESH_TOKEN_SECRET=test_refresh_token_secret_123456789
@@ -50,6 +51,8 @@ SMTP_HOST=localhost
 SMTP_PORT=1025
 SMTP_USER=test
 SMTP_PASS=test
+SMTP_FROM_ADDRESS=noreply@example.com
+SMTP_FROM_NAME=ACL API Test
 
 # Test Drive
 DRIVE_DISK=fs
