feat(dependencies): add `@rlanz/bull-queue` to project
Added `@rlanz/bull-queue` v3.1.0 as a dependency for queue management. Updated `pnpm-lock.yaml` and `package.json` to include the package and its transitive dependencies.

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@aws-sdk/s3-request-presigner": "^3.832.0",
     "@google-cloud/storage": "^7.16.0",
     "@japa/expect-type": "^2.0.3",
+    "@rlanz/bull-queue": "^3.1.0",
     "@vinejs/vine": "^3.0.1",
     "argon2": "^0.43.0",
     "bcrypt": "^6.0.0",
