feat(config): add queue Redis configuration to .env.example
Updated `.env.example` with new environment variables for `QUEUE_REDIS_HOST`, `QUEUE_REDIS_PORT`, and `QUEUE_REDIS_PASSWORD`. This prepares the application for queue-specific Redis configuration.

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,10 @@ REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_PASSWORD=
 
+QUEUE_REDIS_HOST=127.0.0.1
+QUEUE_REDIS_PORT=6379
+QUEUE_REDIS_PASSWORD=
+
 # Rate Limiter
 LIMITER_STORE=redis
 
