refactor(dependencies): clean up pnpm-lock.yaml formatting
Removed unnecessary line breaks and braces in `resolution` and `engines` fields for improved consistency. Simplified the overall structure without altering dependencies or functionality.

--- a/package.json
+++ b/package.json
@@ -86,7 +86,6 @@
     "@aws-sdk/client-s3": "^3.832.0",
     "@aws-sdk/s3-request-presigner": "^3.832.0",
     "@google-cloud/storage": "^7.16.0",
-    "@japa/expect-type": "^2.0.3",
     "@rlanz/bull-queue": "^3.1.0",
     "@vinejs/vine": "^3.0.1",
     "argon2": "^0.43.0",
@@ -116,6 +115,7 @@
       "@swc/core",
       "argon2",
       "bcrypt",
+      "msgpackr-extract",
       "prettier-edgejs"
     ]
   },
