feat(config): add queue Redis variables to .env.test
Introduced `QUEUE_REDIS_HOST`, `QUEUE_REDIS_PORT`, and `QUEUE_REDIS_PASSWORD` to `.env.test`. This ensures proper configuration for queue-specific Redis usage in the testing environment.

--- a/.env.test
+++ b/.env.test
@@ -19,6 +19,11 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=redis
 
+# Queue Redis (using same as main Redis)
+QUEUE_REDIS_HOST=localhost
+QUEUE_REDIS_PORT=6379
+QUEUE_REDIS_PASSWORD=redis
+
 SESSION_DRIVER=memory
 
 # Rate Limiter
