--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,10 +1,10 @@
 ---
 services:
-  timescaledb:
-    image: timescale/timescaledb-ha:pg17
-    container_name: base-acl-timescaledb
+  postgres:
+    image: postgres:16
+    container_name: base-acl-postgres
     healthcheck:
-      test: ['CMD', 'pg_isready', '-q', '-d', '${DB_DATABASE}', '-U', '${DB_USER}']
+      test: ['CMD-SHELL', 'pg_isready -U ${DB_USER} -d ${DB_DATABASE}']
       timeout: 45s
       interval: 10s
       retries: 10
@@ -44,13 +44,13 @@ services:
     ports:
       - '3000:3000'
     environment:
-      PGRST_DB_URI: postgres://${DB_USER}:${DB_PASSWORD}@timescaledb:5432/${DB_DATABASE}
+      PGRST_DB_URI: postgres://${DB_USER}:${DB_PASSWORD}@postgres:5432/${DB_DATABASE}
       PGRST_DB_SCHEMA: public
       PGRST_DB_ANON_ROLE: web_anon
       PGRST_JWT_SECRET: ${APP_KEY}
       PGRST_SERVER_PORT: 3000
     depends_on:
-      - timescaledb
+      - postgres
     networks:
       - app-network
 
