refactor(ci): replace timescaledb with postgres in workflows
Updated `.github/workflows/ci.yml` to use the `postgres:16` image instead of `timescale/timescaledb:latest-pg16`. Simplified the service configuration while preserving compatibility.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
 
     services:
       postgres:
-        image: timescale/timescaledb:latest-pg16
+        image: postgres:16
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
